# Temporal_Parametric_Graph_Lindenmayer_System_Plant_Lab

./: CMakeLists.txt  README.md  build_and_run.bat  clean_build.bat  export_obj.bat
assets/: leaf_texture.ppm
docs/: ARCHITECTURE.md  CONTROLS.md  EPOCH_DROPIN_NOTES.md
examples/headless_dump/: main.cpp
examples/opengl_glfw/: main.cpp
src/twol/: generator.cpp  io.cpp  io.hpp  lsystem.cpp  lsystem.hpp  math.cpp  math.hpp  mesh_builder.cpp  mesh_builder.hpp  plant.hpp  presets.cpp  random.cpp  random.hpp  twol.hpp
